--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Stats preview card component</title>
-  
 </head>
 
 <body>
@@ -17,35 +16,36 @@
 
   <div class="writing">
 
-  <h1> Get insights that help <br> your business grow. </h1>
+  <h1> Get <span> insights </span> that help <br> your business grow. </h1>
 
   <p> Discover the benefits of data analytics and make <br> better decisions regarding revenue, customer 
   <br> experience, and overall efficiency. </p>
-
 
  <div class="numbers">
 
  <div>
   <h2> 10k+ </h2>
-  <p> companies </p>
+  <p> COMPANIES </p>
  </div>
 
  <div>
   <h2> 314 </h2>
-  <p> templates </p>
+  <p> TEMPLATES </p>
  </div>
 
  <div>
   <h2> 12m+ </h2>
-  <p> queries </p>
+  <p> QUERIES </p>
  </div>
 
  </div>
 
-  </div>
+ </div>
 
-  <div>
-  <img src="images/image-header-desktop.jpg">
+  <div class="image">
+    <div class="image-overlay">
+
+    </div>
   </div>
 
   </div>
